accelerator_diabetes/redo_component/accelerator/hls/.autopilot/db/clang.err.log
../csv_import.cpp:21:28: error: implicit instantiation of undefined template 'std::__cxx11::basic_istringstream<char, std::char_traits<char>, std::allocator<char> >'
        std::istringstream iss(line);
                           ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/8.3.0/win64.o/nt\lib\gcc\x86_64-w64-mingw32\8.3.0\include\c++\iosfwd:100:11: note: template is declared here
    class basic_istringstream;
          ^
1 error generated.
